--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
         <!-- contact-section end -->
 
         <div class="footer-section flex justify-center mt-56 h-60  bg-black">
-            <footer class="flex flex-col items-center pt-8">
-                <div class="footer-navbar text-white flex items-center justify-between w-3/4 text-xl">
+            <footer class="flex flex-col items-center justify-center pt-8">
+                <div class="footer-navbar text-white flex items-center  justify-between  w-3/4 text-xl">
                     <a href="#Home">
                         <p class="cursor-pointer hover:text-gray-200">Home</p>
                     </a>
