--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                     <h1 class="mt-8 text-6xl font-semibold">M.Kumail Khan</h1>
                     <p class="mt-8 text-2xl">Frontend Web Developer</p>
                     <div class="buttons mt-8">
-                        <button
-                            class="border-2 rounded-3xl border-black pl-7 pr-7 pt-2 pb-2 hover:bg-black hover:text-white ease-in-out duration-300">Download
-                            CV</button>
-                        <button
-                            class="border-2 border-black bg-black text-white rounded-3xl pl-7 pr-7 pt-2 pb-2 ">Contact
-                            Info</button>
+                        <a href="images/Kumail Khan.pdf"> <button
+                                class="border-2 rounded-3xl border-black pl-7 pr-7 pt-2 pb-2 hover:bg-black hover:text-white ease-in-out duration-300">Download
+                                CV</button></a>
+                        <a href="mailto:liamukkhan@gmail.com"> <button
+                                class="border-2 border-black bg-black text-white rounded-3xl pl-7 pr-7 pt-2 pb-2 ">Contact
+                                Info</button></a>
                     </div>
                     <div class="links mt-8 flex gap-4">
                         <a href=" https://github.com/Kumail-Khan"><i
