--- a/index.html
+++ b/index.html
@@ -159,56 +159,57 @@
                 <div class="project-cards flex flex-wrap justify-center gap-6 pt-28">
                     <div class="card-parent">
                         <div class="card bg-slate-300 hover:bg-slate-400 ease-in-out duration-200" id="project-cards">
-                            <img src="images/new-pict.jpg">
-                            <h1>Project 1</h1>
+                            <img src="images/alhane-image.PNG">
+                            <h1>Alhanee Law Firm 1</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et sed explicabo nihil,
                                 odio
                                 ipsa quasi.</p>
                             <div class="buttons">
-                                <button>Github</button>
-                                <button>Live Demo</button>
+                                <a href="https://github.com/Kumail-Khan/Abdelaziz-Alhanaee-Law">
+                                    <button>Github</button></a>
+                                <a href="https://alhaneelawfirmkk.netlify.app"><button>Live Demo</button></a>
                             </div>
                         </div>
                     </div>
                     <!--  card  end -->
                     <div class="card-parent">
                         <div class="card  bg-slate-300 hover:bg-slate-400 ease-in-out duration-200" id="project-cards">
-                            <img src="images/new-pict.jpg">
-                            <h1>Project 2</h1>
+                            <img src="images/balkan-image.PNG">
+                            <h1>Balkan Bro's</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et sed explicabo nihil,
                                 odio
                                 ipsa quasi.</p>
                             <div class="buttons">
-                                <button>Github</button>
-                                <button>Live Demo</button>
+                                <a href="https://github.com/Kumail-Khan/balkans-bros"><button>Github</button></a>
+                                <a href="https://balkans-bros-kk.netlify.app"> <button>Live Demo</button></a>
                             </div>
                         </div>
                     </div>
                     <!--  card  end -->
                     <div class="card-parent">
                         <div class="card  bg-slate-300 hover:bg-slate-400 ease-in-out duration-200" id="project-cards">
-                            <img src="images/new-pict.jpg">
-                            <h1>Project 3</h1>
+                            <img src="images/hospital-image.PNG">
+                            <h1>Dubai Equine Hospital</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et sed explicabo nihil,
                                 odio
                                 ipsa quasi.</p>
                             <div class="buttons">
-                                <button>Github</button>
-                                <button>Live Demo</button>
+                                <a href="https://github.com/Kumail-Khan/dubai-hospital"> <button>Github</button></a>
+                                <a href="https://dubaihospitalkk.netlify.app"> <button>Live Demo</button></a>
                             </div>
                         </div>
                     </div>
                     <!--  card  end -->
                     <div class="card-parent">
                         <div class="card  bg-slate-300 hover:bg-slate-400 ease-in-out duration-200" id="project-cards">
-                            <img src="images/new-pict.jpg">
-                            <h1>Project 4</h1>
+                            <img src="images/protfolio-image.PNG">
+                            <h1>Client Protfolio 4</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et sed explicabo nihil,
                                 odio
                                 ipsa quasi.</p>
                             <div class="buttons">
-                                <button>Github</button>
-                                <button>Live Demo</button>
+                                <a href="https://github.com/Kumail-Khan/client-protfolio"><button>Github</button></a>
+                                <a href="https://clientprotfoliokk.netlify.app"><button>Live Demo</button></a>
                             </div>
                         </div>
                     </div>
