--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="card-parent">
                         <div class="card bg-slate-300 hover:bg-slate-400 ease-in-out duration-200" id="project-cards">
                             <img src="images/alhane-image.PNG">
-                            <h1>Alhanee Law Firm 1</h1>
+                            <h1>Alhanee Law Firm </h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et sed explicabo nihil,
                                 odio
                                 ipsa quasi.</p>
@@ -216,28 +216,28 @@
                     <!--  card  end -->
                     <div class="card-parent ">
                         <div class="card  bg-slate-300 hover:bg-slate-400 ease-in-out duration-200" id="project-cards">
-                            <img src="images/new-pict.jpg">
-                            <h1>Project 5</h1>
+                            <img src="images/weather-image.PNG">
+                            <h1>Weather App</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et sed explicabo nihil,
                                 odio
                                 ipsa quasi.</p>
                             <div class="buttons">
-                                <button>Github</button>
-                                <button>Live Demo</button>
+                                <a href="https://github.com/Kumail-Khan/Weather-App"> <button>Github</button></a>
+                                <a href="https://weatherapkk.netlify.app/"><button>Live Demo</button></a>
                             </div>
                         </div>
                     </div>
                     <!--  card  end -->
                     <div class="card-parent">
                         <div class="card  bg-slate-300 hover:bg-slate-400 ease-in-out duration-200" id="project-cards">
-                            <img src="images/new-pict.jpg">
-                            <h1>Project 6</h1>
+                            <img src="images/game-image.PNG">
+                            <h1>Tik-Tak-Toe Game</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et sed explicabo nihil,
                                 odio
                                 ipsa quasi.</p>
                             <div class="buttons">
-                                <button>Github</button>
-                                <button>Live Demo</button>
+                                <a href="https://github.com/Kumail-Khan/Tic--ac-Toe-Game"><button>Github</button></a>
+                                <a href="https://tiktactoekk.netlify.app/"><button>Live Demo</button></a>
                             </div>
                         </div>
                     </div>
